css/style.css
@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@400;600;700&display=swap");

:root {
    --mid-dark-grey: #f2f4f6;
    --bright: #fcfcfc;
    --accent: #ff4b4b;
    --light-text: #8e94a2;
    --dark-text: #3b4660;
    --player-height: 112px;
}

body {
    margin: 0px;
    padding: 0px;
    font-family: "Mukta", sans-serif;
    background-color: var(--bright);
    color: var(--dark-text);
    height: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
}

.left-nav-container {
    width: 300px;
    height: calc(100vh - var(--player-height));
    background-color: var(--mid-dark-grey);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.left-nav {
    width: 300px;
    background-color: var(--mid-dark-grey);
    box-sizing: border-box;
    padding-left: 24px;
    overflow-y: auto;
}

.logo-container {
    width: 300px;
    height: 120px;
    display: flex;
    padding-left: 24px;
    align-items: center;
    box-sizing: border-box;
    background-color: var(--mid-dark-grey);
}

.nav-logo {
    width: 180px;
    padding-top: 4px;
}

.library-section {
    margin-top: 32px;
    margin-bottom: 32px;
}

.library-section-heading {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 14px;
    color: var(--light-text);
    font-weight: 700;
}

.library-items {
    margin-top: 14px;
}

.library-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 10px;
}

.library-item-text {
    font-size: 18px;
    margin-left: 16px;
    font-weight: 600;
}

.library-item-active {
    color: var(--accent);
}

.videoBox {
    width: 300px;
}

.player {
    background-color: white;
    height: var(--player-height);
    position: absolute;
    bottom: 0px;
    width: 100vw;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
}

.song-details-container {
    flex-basis: 300px;
    box-sizing: border-box;
    padding: 0px 24px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.song-name {
    font-size: 18px;
    font-weight: 600;
    line-height: 24px;
}

.artist-name {
    font-size: 14px;
    color: var(--light-text);
    line-height: 22px;
}

.controls-container {
    padding: 0 48px;
    flex: 1;
    display: flex;
    align-items: center;
}

